--- a/portifolio/config.json
+++ b/portifolio/config.json
@@ -1,4 +1,6 @@
 {
+  "name": "Lucas Eduardo",
+  "role": "developer",
   "github": "lucaseduardo1656",
   "instagram": "https://www.instagram.com/lucaseduardo_111/",
   "email": ""
